--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -18,10 +18,7 @@ env:
   SERVER_IMAGE: "wfnews-server"
   LIQUIBASE_IMAGE: "wfnews-liquibase"
   APISIX_IMAGE: "wfnews-apisix"
-  ETCD_IMAGE: "wfnews-etcd"
-  ETCD_PASSWORD: "default"
   API_KEY: "default"
-  APISIX_GUI_IMAGE: "wfnews-apisix-gui"
   TARGET_ENV: "dev"
   ALB_NAME: "default"
   VPC_NAME: "Dev_vpc"
@@ -75,9 +72,6 @@ jobs:
           SERVER_IMAGE: ${{env.registry}}/bcgov/${{ env.SERVER_IMAGE }}:pr-${{ github.event.pull_request.number }}
           LIQUIBASE_IMAGE: ${{env.registry}}/bcgov/${{ env.LIQUIBASE_IMAGE }}:pr-${{ github.event.pull_request.number }}
           APISIX_IMAGE: ${{env.registry}}/bcgov/${{ env.APISIX_IMAGE }}:pr-${{ github.event.pull_request.number }}
-          ETCD_IMAGE: ${{env.registry}}/bcgov/${{ env.ETCD_IMAGE }}:pr-${{ github.event.pull_request.number }}
-          ETCD_MASSWORD: ${{env.ETCD_PASSWORD}}
-          APISIX_GUI_IMAGE: ${{env.registry}}/bcgov/${{ env.APISIX_GUI_IMAGE }}:pr-${{ github.event.pull_request.number }}
           API_KEY: ${{ secrets.API_KEY }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: dbTESTsecretUNUSED
@@ -107,6 +101,12 @@ jobs:
           WFNEWS_USERNAME: ${{env.WFNEWS_USERNAME}}
           WFNEWS_MAX_CONNECTIONS: ${{env.WFNEWS_MAX_CONNECTIONS}}
           SNS_EMAIL_TARGETS: ${{env.SNS_EMAIL_TARGETS}}
+          agolUrl: test.test
+          drivebcBaseUrl: test.test
+          openmapsBaseUrl: test.test
+          siteMinderURLPrefix: test.test
+          agolAreaRestrictions: test.test
+          agolBansAndProhibitions: test.test
 
         run: terragrunt plan --terragrunt-non-interactive
 
