--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -127,6 +127,8 @@ on:
         required: true
       WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET:
         required: true
+      WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET:
+        required: true
       API_KEY:
         required: true
       SNS_EMAIL_TARGETS:
@@ -194,6 +196,7 @@ jobs:
           WFNEWS_AGOL_QUERY_URL: ${{inputs.WFNEWS_AGOL_QUERY_URL}}
           SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
           WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET}}
+          WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
           WFNEWS_USERNAME: ${{inputs.WFNEWS_USERNAME}}
           WFNEWS_MAX_CONNECTIONS: ${{inputs.WFNEWS_MAX_CONNECTIONS}}
           SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS }}
