--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -84,7 +84,10 @@ on:
       WFNEWS_MAX_CONNECTIONS:
         required: true
         type: number
-      WEBADE_OAUTH2_CLIENT_ID:
+      WEBADE_OAUTH2_REST_CLIENT_ID:
+        required: true
+        type: string
+      WEBADE_OAUTH2_UI_CLIENT_ID:
         required: true
         type: string
       WEBADE_OAUTH2_AUTHORIZE_URL:
@@ -176,7 +179,8 @@ jobs:
           ALB_NAME: ${{ inputs.ALB_NAME }}
           VPC_NAME: ${{ inputs.VPC_NAME }}
           SUBNET_FILTER: ${{ inputs.SUBNET_FILTER }}
-          WEBADE_OAUTH2_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_CLIENT_ID}}
+          WEBADE_OAUTH2_REST_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_REST_CLIENT_ID}}
+          WEBADE_OAUTH2_UI_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_UI_CLIENT_ID}}
           WEBADE-OAUTH2_TOKEN_CLIENT_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_CLIENT_URL}}
           WEBADE-OAUTH2_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_URL}}
           WEBADE_OAUTH2_AUTHORIZE_URL: ${{inputs.WEBADE_OAUTH2_AUTHORIZE_URL}}
