Fix header image, video mixed with evacs

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -43,7 +43,7 @@
             "url": "http://localhost:11200/pub/wfnrof"
         },
         "pointId": {
-            "url": "https://d1wfapi.vividsolutions.com/wfss-pointid-api",
+            "url": "https://bcwsapi.nrs.gov.bc.ca/wfss-pointid-api",
             "#url": "https://testapps.nrs.gov.bc.ca/pub/wfss/v1",
             "#url": "https://wfss-pointid-api-dev-160-secure-c9737f-dev.apps.silver.devops.gov.bc.ca/wfss-pointid-api"
         },
