--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -63,14 +63,15 @@ jobs:
       ALB_NAME: default
       VPC_NAME: Test_vpc
       SUBNET_FILTER: App
-      WEBADE_OAUTH2_CLIENT_ID: WFNEWS-UI
-      WEBADE-OAUTH2_TOKEN_CLIENT_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true&grant_type=client_credentials
-      WEBADE-OAUTH2_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
-      WEBADE_OAUTH2_AUTHORIZE_URL: https://intapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/authorize
-      WFDM_REST_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfdm-document-management-api/
-      WFIM_CLIENT_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/
-      WFIM_CODE_TABLES_URL: https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/codeTables
-      WEBADE-OAUTH2_CHECK_TOKEN_URL: https://intapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true
+      WEBADE_OAUTH2_UI_CLIENT_ID: WFNEWS-UI
+      WEBADE_OAUTH2_REST_CLIENT_ID: WFNEWS-REST
+      WEBADE-OAUTH2_TOKEN_CLIENT_URL: https://testapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true&grant_type=client_credentials
+      WEBADE-OAUTH2_TOKEN_URL: https://testapps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
+      WEBADE_OAUTH2_AUTHORIZE_URL: https://testapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/authorize
+      WFDM_REST_URL: https://t1bcwsapi.nrs.gov.bc.ca/wfdm-document-management-api/
+      WFIM_CLIENT_URL: https://t1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/
+      WFIM_CODE_TABLES_URL: https://t1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api/codeTables
+      WEBADE-OAUTH2_CHECK_TOKEN_URL: https://testapps.nrs.gov.bc.ca/pub/oauth2/v1/check_token?disableDeveloperFilter=true
       WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: true
       SMTP_HOST_NAME: apps.smtp.gov.bc.ca
       SMTP_FROM_EMAIL: noreply@gov.bc.ca
@@ -96,6 +97,7 @@ jobs:
       DB_PASS: ${{ secrets.TEST_DB_PASS }}
       TFC_TEAM_TOKEN: ${{ secrets.TFC_TEAM_TOKEN }}
       SMTP_PASSWORD: ${{ secrets.TEST_SMTP_PASSWORD }}
-      WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{ secrets.TEST_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET }}
+      WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{ secrets.TEST_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET }}    
+      WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET: ${{ secrets.DEV_WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
       API_KEY: ${{ secrets.API_KEY_TEST }}
       SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS_TEST }}
