--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -114,6 +114,10 @@ on:
       AGOL_BANS_AND_PROHIBITIONS:
         required: true
         type: string
+      GITHUB_RELEASE_NAME:
+        required: false
+        type: string
+        default: ""
 
     secrets:
       # AWS_ACCESS_KEY_ID:
@@ -169,6 +173,7 @@ jobs:
           # AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID }}
           # AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
+          GITHUB_RELEASE_NAME: ${{inputs.GITHUB_RELEASE_NAME}}
           CLIENT_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.CLIENT_IMAGE }}:${{ inputs.IMAGE_TAG }}
           SERVER_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.SERVER_IMAGE }}:${{ inputs.IMAGE_TAG }}
           LIQUIBASE_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
