--- a/.github/workflows/jmeter-manual.yml
+++ b/.github/workflows/jmeter-manual.yml
@@ -19,5 +19,5 @@ jobs:
         uses: rbhadti94/apache-jmeter-action@v0.6.0
         with:
           testFilePath: load-testing/WFNEWS_Load_Test.jmx
-          args: -Jthreads=${{ NUM_USERS }} -Jhost=${{ ENVIRONMENT }}.bcwildfireservices.com -Jiterations=${{NUM_ITERATIONS}}
+          args: -Jthreads=${{ env.NUM_USERS }} -Jhost=${{ env.ENVIRONMENT }}.bcwildfireservices.com -Jiterations=${{ env.NUM_ITERATIONS }}
 
