--- a/.github/workflows/jmeter-manual.yml
+++ b/.github/workflows/jmeter-manual.yml
@@ -1,4 +1,4 @@
-name: Run Jmeter Tests
+name: _Run Jmeter Tests
 
 env:
   ENVIRONMENT: dev
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: wait for new components to start
-        run: sleep 30
+        run: cat load-testing/WFNEWS_Load_Test.jmx && sleep 30
       
       - name: execute test
         uses: rbhadti94/apache-jmeter-action@v0.6.0
