Updated variable names for clarity

--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -26,5 +26,5 @@ jobs:
         uses: rbhadti94/apache-jmeter-action@v0.6.0
         with:
           testFilePath: load-testing\WFNEWS_Load_Test.jmx
-          args: -Jthreads=${{ env.NUM_USERS }} -Jhost=${{ env.ENVIRONMENT }}.bcwildfireservices.com -Jiterations=${{env.NUM_ITERATIONS}}
+          args: -Jthreads=${{ env.NUM_USERS }} -Jenvironment=${{ env.ENVIRONMENT }}.bcwildfireservices.com -Jiterations=${{env.NUM_ITERATIONS}}
 
