--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -1,13 +1,14 @@
 name: Plan using terragrunt
 
 on:
-  pull_request_target:
-    types: 
-      - opened
-    branches:
-      - 'main'
-    paths:
-      - "terraform/**"
+  workflow_dispatch:
+#   pull_request_target:
+#     types: 
+#       - opened
+#     branches:
+#       - 'main'
+#     paths:
+#       - "terraform/**"
 
 env:
   TF_VERSION: 1.2.2
