--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: wait for new components to start
-        run: cat load-testing\WFNEWS_Load_Test.jmx && sleep 30
+        run: cat load-testing/WFNEWS_Load_Test.jmx && sleep 30
       
       - name: execute test
         uses: rbhadti94/apache-jmeter-action@v0.6.0
