--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -19,7 +19,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: wait for new components to start
+    
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      
+      - name: wait for new components to start, validate script is acceccible
         run: cat load-testing/WFNEWS_Load_Test.jmx && sleep 30
       
       - name: execute test
