change back to dev server instead of local

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -82,7 +82,7 @@
         "#incidents": "https://d1wfapi.vividsolutions.com/wfim-incidents-api",
         "incidents": "https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api",
         "newsLocal": "http://localhost:8080/wfnews-api-rest-endpoints-1.0.0-SNAPSHOT",
-        "wfnews": "http://localhost:8080/wfnews-api-rest-endpoints-1.0.0-SNAPSHOT",
+        "wfnews": "https://wfnews-server.dev.bcwildfireservices.com",
         "#wfnews": "http://localhost:1338",
         "#orgunit": "https://d1wfapi.vividsolutions.com/wforg-org-unit-api",
         "orgunit": "https://i1bcwsapi.nrs.gov.bc.ca/wforg-org-unit-api",
