--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,5 +1,5 @@
 limit_req_zone $binary_remote_addr zone=wfnewslimit:10m rate=10000r/s;
-
+limit_req_zone $binary_remote_addr zone=wfnewsnotoken:10m rate=50r/s;
 
 server {
   listen 8080;
@@ -15,9 +15,17 @@ server {
     return 204;
   }
   
+  location @slowdown {
+    limit_req zone=wfnewsnotoken burst=50 nodelay;
+
+    proxy_pass https://wfnews-server.{LICENSE_PLATE}-{TARGET_ENV}.nimbus.cloud.gov.bc.ca;
+  }
+
   location / {
     limit_req zone=wfnewslimit burst=10000 nodelay;
     auth_request /_validate_apikey;
+
+    error_page 403 = @slowdown;
     
     proxy_pass https://wfnews-server.{LICENSE_PLATE}-{TARGET_ENV}.nimbus.cloud.gov.bc.ca;
   }
