Use API gateway key
Updates to UI to pass the apiKey header, add key to config.jsp. Update API to accept apiKey header

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -1,5 +1,6 @@
 {
     "application": {
+        "wfnewsApiKey": "fake-api-key",
         "acronym": "WFNEWS",
         "version": "1.0.0-SNAPSHOT",
         "buildNumber": ".0000",
