--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ca.bc.gov.nrs.wfnews</groupId>
 	<artifactId>wfnews-api-parent</artifactId>
 	<name>wfnews-api-parent</name>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
