--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,7 @@ ENV TOMCAT_HOME=/usr/local/tomcat \
   CATALINA_HOME=/usr/local/tomcat \
   CATALINA_OUT=/usr/local/tomcat/logs \
   TOMCAT_MAJOR=8 \
-  JAVA_OPTS="$JAVA_OPTS" 
+  JAVA_OPTS="$JAVA_OPTS -Xss800" 
 
 
 # TODO: REVERT CHOWN COMMAND TO 770 ONCE DONE TESTING
@@ -19,7 +19,8 @@ RUN apt-get update &&\
   adduser --system tomcat &&\
   chown -R tomcat:0 `readlink -f ${CATALINA_HOME}` &&\
   chmod -R 770 `readlink -f ${CATALINA_HOME}` &&\
-  chown -h tomcat:0 ${CATALINA_HOME}
+  chown -h tomcat:0 ${CATALINA_HOME} &&\
+  sed -i "s/maxThreads=\"150\"/maxThreads=\"800\"/g" conf/server.xml
 
 # run as tomcat user
 USER tomcat
