--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -145,6 +145,10 @@ on:
         required: false
         type: string
         default: ""
+      DB_SIZE:
+        required: false
+        type: number
+        default: 10
 
     secrets:
       # AWS_ACCESS_KEY_ID:
@@ -220,6 +224,7 @@ jobs:
           API_KEY: ${{ secrets.API_KEY }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
+          DB_SIZE: ${{ inputs.DB_SIZE }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
           VPC_NAME: ${{ inputs.VPC_NAME }}
           SUBNET_FILTER: ${{ inputs.SUBNET_FILTER }}
