Upgrade to capacitor 4

--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -19,7 +19,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/youtube-player": "^13.3.9",
     "@angular/animations": "13.3.11",
     "@angular/cdk": "13.3.9",
     "@angular/common": "13.3.11",
@@ -31,6 +30,7 @@
     "@angular/platform-browser-dynamic": "13.3.11",
     "@angular/router": "13.3.11",
     "@angular/service-worker": "13.3.11",
+    "@angular/youtube-player": "^13.3.9",
     "@busacca/ng-pick-datetime": "10.0.0",
     "@ckeditor/ckeditor5-angular": "4.0.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "35.0.1",
@@ -92,6 +92,7 @@
     "@angular/cli": "13.3.8",
     "@angular/compiler-cli": "13.3.11",
     "@angular/language-service": "13.3.11",
+    "@capacitor/cli": "^4.0.0",
     "@ngrx/schematics": "12.2.0",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.2",
