--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -32,9 +32,20 @@
     "@angular/service-worker": "13.3.11",
     "@angular/youtube-player": "^13.3.9",
     "@busacca/ng-pick-datetime": "10.0.0",
+    "@capacitor-community/fcm": "^5.0.1",
     "@capacitor/android": "^5.0.3",
+    "@capacitor/app": "^5.0.2",
+    "@capacitor/app-launcher": "^5.0.2",
+    "@capacitor/browser": "^5.0.2",
+    "@capacitor/camera": "^5.0.2",
     "@capacitor/core": "^5.0.3",
+    "@capacitor/device": "^5.0.2",
+    "@capacitor/dialog": "^5.0.2",
+    "@capacitor/geolocation": "^5.0.2",
     "@capacitor/ios": "^5.0.3",
+    "@capacitor/network": "^5.0.2",
+    "@capacitor/push-notifications": "^5.0.2",
+    "@capacitor/splash-screen": "^5.0.2",
     "@ckeditor/ckeditor5-angular": "4.0.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "35.0.1",
     "@ngrx/effects": "13.1.0 ",
