--- a/client/wfnews-war/src/main/angular/android/app/capacitor.build.gradle
+++ b/client/wfnews-war/src/main/angular/android/app/capacitor.build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation project(':capacitor-network')
     implementation project(':capacitor-push-notifications')
     implementation project(':capacitor-splash-screen')
+    implementation project(':android-post-notification-permission')
 
 }
 
