--- a/client/wfnews-war/src/main/angular/android/capacitor.settings.gradle
+++ b/client/wfnews-war/src/main/angular/android/capacitor.settings.gradle
@@ -34,3 +34,6 @@ project(':capacitor-push-notifications').projectDir = new File('../node_modules/
 
 include ':capacitor-splash-screen'
 project(':capacitor-splash-screen').projectDir = new File('../node_modules/@capacitor/splash-screen/android')
+
+include ':android-post-notification-permission'
+project(':android-post-notification-permission').projectDir = new File('../node_modules/android-post-notification-permission/android')
