--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -152,7 +152,7 @@ on:
       MAX_UPLOAD_SIZE:
         required: false
         type: string
-        default: ""
+        default: "10M"
         
 
     secrets:
