--- a/client/wfnews-war/src/main/angular/android/app/src/main/AndroidManifest.xml
+++ b/client/wfnews-war/src/main/angular/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     </queries>
     
     <application
-        android:allowBackup="true"
+        android:usesCleartextTraffic="true" 
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -49,8 +49,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- Camera, Photos, input file -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- Geolocation API -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -65,7 +63,6 @@
     <!-- Video -->
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- Audio -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
 
 </manifest>
