--- a/client/wfnews-war/src/main/angular/android/app/src/main/AndroidManifest.xml
+++ b/client/wfnews-war/src/main/angular/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     </queries>
     
     <application
-        android:usesCleartextTraffic="true" 
+        android:usesCleartextTraffic="false"
+        android:allowBackup="false" 
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
